--- a/experience.html
+++ b/experience.html
@@ -163,8 +163,46 @@
                       中考就这样结束了，然后是放假，6月26日，成绩出来了，我是级部第九，不错的，649.45，考上一中了。今天又想起来朋友们，他们还好吗？让时光慢些吧，日子一天天过去，和朋友的联系越来越少了……</p>
                 </div>
             </div>
-
-           
+<div class="item" data-text="高一东校20班">
+                <div class="content">
+                    <img src="img/experience15.jpg" alt="" class="img">
+                    <h2 class="content-title">2024</h2>
+                    <p class="content-desc">
+                      这是我们东校20班312宿舍，你找到我了吗</p>
+                </div>
+            </div>
+<div class="item" data-text="疯狂星期四">
+                <div class="content">
+                    <img src="img/experience16.jpg" alt="" class="img">
+                    <h2 class="content-title">2024</h2>
+                    <p class="content-desc">
+                      这是我们312宿舍晚上也住的三个人。最右边呆呆的是我，左边高的是惠煜博，中间是王振宇，我们哥们三个关系可好了，每个星期四我们会举行疯狂星期四</p>
+                </div>
+            </div>            
+ <div class="item" data-text="我的游戏成就">
+                <div class="content">
+                    <img src="img/experience17.jpg" alt="" class="img">
+                    <h2 class="content-title">2024</h2>
+                    <p class="content-desc">
+                      这个是2025年回忆时写的，所以有些是之后的成就。王者玩了一年多，四个赛季二十星，一堆标，还拿过连胜王。第五人格最强时双五阶80胜率，对面国服四黑一样平局争胜。元气骑士绿手刀收入囊中。使命召唤获得m16传说皮。我算是个游戏大师了。</p>
+                </div>
+            </div>        
+ <div class="item" data-text="校长杯足球赛">
+                <div class="content">
+                    <img src="img/experience18.jpg" alt="" class="img">
+                    <h2 class="content-title">2023</h2>
+                    <p class="content-desc">
+                      我们失败了，但是我们尽力了，我担任下半场守门员被5攻进1，我是80%守住。上半场队友被7攻进2也不错了。但是我们进攻的队友一整局进攻了3次一个也没进。其实我觉得我更适合进攻但还是服从调剂了。不过从那以后，我和我的好哥们潘旭臻每天练习足球，现在我们两个都强的可怕 </p>
+                </div>
+            </div>
+    <div class="item" data-text="我的当下与未来">
+                <div class="content">
+                    <img src="img/experience14.jpg" alt="" class="img">
+                    <h2 class="content-title">2025</h2>
+                    <p class="content-desc">
+                      突然想到忘记说去年我们高一下学期就分班了，我是高一12班。不过不用担心，我和我的朋友都一直不吃联系。王振宇惠煜博他们宿舍和我的很近，疯狂星期四已然开展。而且还多了新面孔。另外我现在学习大概是班级2、3名，最高第二与第一差0.5，级部名次我是东校普通班19。但我感觉这不是我的极限，毕竟我每天都在想着怎么玩。另外我基本不需要听课，全靠自学。截至目前，我假期没写过作业，从没上补习班，网课曾被强制看了七节免费小升初，基本全是在推销。所以算作没看吧。体测我一次93，一次97，运动会报名奖拿不到但是在参赛中已是中档。在班级里更是顶级第二三名左右，我果然是全才！我打算考武汉大学计算机系，要650，我要做人工智能，无人机，软件，硬件的集大成者。</p>
+                </div>
+            </div>        
         </div>
     </div>
 
