--- a/space.html
+++ b/space.html
@@ -48,6 +48,14 @@
 本站背景随时间变化，想主动切换可以点击【清枫客LOGO】。本站暂不支持文章新页面打开，别问为什么，三小时做个网站已经够累了。本站暂不支持其他页面，未来每次回家会陆续增加学习工具，论坛，游戏视频直播，编程教学等功能。
             </p>    
             </div>
+            <div id="card4">
+            <h2 id="title4">4.2025的回音</h2>
+            <h3 id="writedate3">2025/04/05</h3>
+            <img src="images/photo04.jpg" alt="" id="picture4">
+            <p id="thinking4">
+好久没维护这个网站了，今天心血来潮更新了experience。在这里种下一粒种子，希望多年以后见证它的开放。
+            </p>    
+            </div>
         </div>
         <div class="right">
             <br><br>
@@ -56,7 +64,8 @@
                  <a href="#card1" id="m1">1.本站3小时建成</a><br> 
                  <a href="#card2" id="m2">2.中考后的思念</a><br>
                  <a href="#card3" id="m3">3.本站使用教程</a><br>
-                 <a href="#card4" id="m4">4.未完待续</a><br>
+                 <a href="#card4" id="m4">4.2025的回音</a><br>
+                 <a href="#card5" id="m5">未完待续</a><br>
         </div>
     </div>
     <div class="mengban">
