--- a/experience.html
+++ b/experience.html
@@ -190,7 +190,7 @@
  <div class="item" data-text="校长杯足球赛">
                 <div class="content">
                     <img src="img/experience18.jpg" alt="" class="img">
-                    <h2 class="content-title">2023</h2>
+                    <h2 class="content-title">2024</h2>
                     <p class="content-desc">
                       我们失败了，但是尽力了，我下半场守门员被5攻进1，上半场队友被7攻进2。但我们进攻的队友一整局攻了3次一个也没进。不过从那以后，我和我的好哥们潘旭臻每天练习足球，现在我们两个都强的可怕，我现在是前锋后卫守门全能 </p>
                 </div>
@@ -198,11 +198,19 @@
     <div class="item" data-text="我的当下与未来">
                 <div class="content">
                     <img src="img/experience19.jpg" alt="" class="img">
-                    <h2 class="content-title">2025</h2>
+                    <h2 class="content-title">2024</h2>
                     <p class="content-desc">
                       现在高二。对了，我们高一下学期就分班了，我是高一12班。不用担心，我和朋友都保持联系。王振宇惠煜博宿舍和我很近，疯狂星期四还多了新面孔。我成绩是班级2、3名，最高第二，与第一差0.5分。级部名次我是一中东校普通部19。这不是极限，毕竟我每天玩，基本不听课，全临时自学。假期没写过作业，从没上辅导班。体测一次93，一次97，班级2、3名。创新大赛也拿了个三等奖。我果然是全才！我打算考武汉大学计算机系，要650，我要做人工智能，无人机，软件，硬件的集大成者。</p>
                 </div>
-            </div>        
+            </div>  
+           <div class="item" data-text="高二莒县研学">
+                <div class="content">
+                    <img src="img/experience20.jpg" alt="" class="img">
+                    <h2 class="content-title">2025</h2>
+                    <p class="content-desc">
+                      我们在四月去了浮来山和莒国古城，参观了莒县博物馆。这是在浮来山半路上拍的。</p>
+                </div>
+            </div>         
         </div>
     </div>
 
