--- a/space.html
+++ b/space.html
@@ -67,7 +67,7 @@
         </div>
         <div class="right">
             <br><br>
-             <h2 id="directory">空间目录</h2>
+             <h2 id="directory1">空间目录</h2>
              <br>
                  <a href="#card1" id="m1">1.本站3小时建成</a><br> 
                  <a href="#card2" id="m2">2.中考后的思念</a><br>
